--- a/data/index.html
+++ b/data/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESP-Wifi Portal</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/m-index.css">
     <style>
         .if {
             display: flex;
