--- a/data/index.html
+++ b/data/index.html
@@ -7,28 +7,6 @@
     <title>ESP-Wifi Portal</title>
     <link rel="stylesheet" href="/m-index.css">
     <style>
-        .if {
-            display: flex;
-            margin-bottom: 10px;
-
-        }
-
-        label {
-            width: 70px;
-            font-weight: 600;
-        }
-
-        input {
-            outline: none;
-            display: block;
-            color: #495057;
-            background-color: #fff;
-            background-clip: padding-box;
-            border: 1px solid #ced4da;
-            padding: .1rem .25rem;
-            flex-grow: 1;
-        }
-
         ul:not(:empty) {
             margin: 0;
             padding: 0;
@@ -94,7 +72,7 @@
         const server = document.querySelector("#serv");
         document.querySelector("form").onsubmit = async (e) => {
             e.preventDefault();
-            if (wifname.value && pass.value) {
+            if (wifname.value) {
                 const result = await fetch(`/save?devname=${devname.value}&wname=${wifname.value}&pass=${pass.value}&server=${server.value}`).then(r => r.text());
                 document.querySelector("#st").textContent = result;
             }
