--- a/data/control.html
+++ b/data/control.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fan Control</title>
-    <link rel="stylesheet" href="./m-index.css">
+    <link rel="stylesheet" href="/m-index.css">
 </head>
 
 <body>
